Consolidate post-4.0.0 history into a single 4.0 baseline commit
Squash 72 commits (v4.0.0..59e5879, 2026-01-05 — 2026-05-24) into one
commit on main. Tree byte-identical to pre-squash HEAD 59e5879. Net
delta from v4.0.0: 288 files, +15,862 / -10,749.

Rolled-up work:
- DNS protocol: Android resolver memory/race fixes; native response
  validation hardened; wire format extracted to src/services/dnsWire.ts.
- Cross-platform parity: Android Unicode sanitization parity; prebuild
  and native-module registration; SDK 36 + 16KB page-size gate.
- iOS / Expo: Migrated Expo SDK 55 → 56.0.4; Swift 6.2 concurrency;
  NativeTabs / Color API / Toolbars / Zoom transitions; route-owned
  chat navigation; dark-mode + theme-aware navigation hardening.
- Type safety: Removed `any` casts repo-wide; manual useMemo/useCallback
  dropped in favor of React Compiler.
- Release pipeline: Tagged 4.0.1 … 4.0.14; AXe release E2E; TestFlight
  evidence; verify:public-redaction + gitleaks gates.
- Documentation: Engineering exec spec, data inventory, model registry,
  DNS protocol spec, system architecture, CLAUDE.md / AGENTS.md.

Tags v4.0.1 … v4.0.14 still point at their original pre-squash commits
(preserved as the TestFlight evidence trail). Main no longer descends
from them past v4.0.0.

Constraint: Tree byte-identical to pre-squash HEAD 59e5879. No source,
dependency, configuration, or asset changes. Public docs continue to
omit ASC IDs, tester groups, signing identifiers, local artifact paths,
team / profile / certificate / device IDs.
Confidence: high
Scope-risk: broad (history rewrite on main; force-with-lease push;
open PRs / clones must rebase).
Directive: Do not delete v4.0.1 … v4.0.14 tags.
Tested: `git diff --stat v4.0.0..HEAD` matches before/after; `git diff
<pre-squash-HEAD> HEAD` empty post-commit; pre-commit hook
(verify:ios-pods + lint + jest --bail) runs as part of the commit.
Not-tested: full verify:all on squashed commit; TestFlight upload;
physical-device install; CI / op